SOF-1699 fix spacings, simplify logic for action triggers export

--- a/src/app/settings/action-triggers/components/action-triggers/action-triggers.component.scss
+++ b/src/app/settings/action-triggers/components/action-triggers/action-triggers.component.scss
@@ -7,6 +7,7 @@
     }
     &--list-open {
       max-width: 450px;
+      padding-right: 16px;
     }
     &--edit {
       flex-grow: 1;
