--- a/src/scss/_sofie-page.scss
+++ b/src/scss/_sofie-page.scss
@@ -34,10 +34,7 @@
   position: relative;
   border-radius: 4px;
   border: 1px solid var(--gray-color);
-  box-shadow:
-    0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2);
   &.c-sofie-card-selected {
     background-color: var(--gray-color);
   }
